<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".goals_dashboard"
    android:background="@color/black">

    <!--This just sets the background to be the cropped version in the drawables-->
    <ImageView
        android:contentDescription="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        />

    <!--The constraint layout here allows for better spacing between the three top bar elements
     and makes them more interchangeable with nested linear layouts if the buttons need labels-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_navigation"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal">

        <!--Image buttons are the easiest to work with for the buttons we need-->
        <!--The backgrounds are set to black for this theme but will need to be changed between
        themes-->
        <ImageButton
            android:id="@+id/btn_notifications"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/notification_bell_dark_mode"
            android:contentDescription="@string/lbl_notifications"

            android:background="@color/black"

            android:scaleX="0.75"
            android:scaleY="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="20dp">

        </ImageButton>

        <!--This nested layout allows the center option, which will be for user settings,
         to have a label directly below the button which will be the user's set profile image-->
        <LinearLayout
            android:id="@id/btn_userOptions"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:orientation="vertical"
            android:scaleX="0.75"
            android:scaleY="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageButton
                android:id="@+id/btn_userOptions"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@color/pale_pink"
                android:contentDescription="@string/lbl_userOptions"

                android:layout_gravity="center">
            </ImageButton>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/placeholder_username"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textColor="@color/pale_pink"/>
        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_darkMode"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/lbl_darkmode"

            android:src="@drawable/dark_mode_switch_dark_mode"

            android:background="@color/black"

            android:scaleX="0.75"
            android:scaleY="0.75"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="20dp">
        </ImageButton>


    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--Simple scroll view will just hold the dashboard options,
     and keep them separate from the bottom app bar-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp">

        <!--The linear layout here will allow each panel to layer vertically in the scroll view-->
        <LinearLayout
            android:id="@+id/dashboardContents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:background="@drawable/rounded_bg"
                android:layout_margin="20sp"
                android:padding="20dp">

                <TextView
                    android:id="@+id/tv_lbl_goalProgress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_goalProgress"
                    android:textColor="@color/pale_pink"
                    android:gravity="center"

                    android:textSize="30sp"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    />

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/goalProgressChart"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="10dp"

                    app:layout_constraintTop_toBottomOf="@id/tv_lbl_goalProgress"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    />

                <TextView
                    android:id="@+id/tv_lbl_setGoal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:layout_constraintTop_toBottomOf="@id/goalProgressChart"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"

                    android:textSize="18sp"
                    android:text="Set Goal"
                    android:textColor="@color/pale_pink"/>

                <TextView
                    android:id="@+id/tv_setGoal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tv_lbl_setGoal"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"

                    android:text="@string/placeholder_goal"
                    android:textColor="@color/pale_pink"/>

                <TextView
                    android:id="@+id/tv_lbl_setGoalAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_setGoal"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"

                    android:textSize="18sp"
                    android:text="Goal Amount"
                    android:textColor="@color/pale_pink"/>

                <TextView
                    android:id="@+id/tv_goalAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tv_lbl_setGoalAmount"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"

                    android:text="@string/placeholder_goal_amount"
                    android:textColor="@color/pale_pink"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/btn_modifyGoal"
                    android:layout_width="190dp"
                    android:layout_height="50dp"
                    android:background="@drawable/button_background"

                    android:padding="10dp"

                    app:layout_constraintTop_toTopOf="@id/tv_goalAmount"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"

                        android:scaleX="0.75"
                        android:scaleY="0.75"

                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:src="@drawable/edit_goal_icon_dark_mode"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:gravity="center"

                        android:textSize="17sp"

                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:text="Modify Goal"
                        android:layout_marginRight="10dp"
                        android:textColor="@color/pale_pink"/>

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>



        </LinearLayout>
    </ScrollView>

    <!--This on works the same as the top navigation-->
    <!--All the elements are drawables, converted from svg's
    into android vector assets and resized from 24x24px to 48x48dp
    and scaled with scaleX and scaleY to keep the size consistent and clear-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomNav"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="bottom"
        android:background="@drawable/bar_background"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="10sp">

        <ImageButton
            android:id="@+id/btn_settings"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/setting_icon_dark_mode"
            android:background="@color/strong_maroon"

            android:scaleX="0.75"
            android:scaleY="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="20dp"

            android:onClick="settingsPage"

            android:contentDescription="@string/lbl_settings">
        </ImageButton>
        <ImageButton
            android:id="@+id/btn_categories"
            android:layout_width="48sp"
            android:layout_height="48sp"
            android:src="@drawable/options_icon_dark_mode"
            android:background="@color/strong_maroon"

            android:scaleX="0.75"
            android:scaleY="0.75"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_settings"
            app:layout_constraintEnd_toStartOf="@id/btn_home"

            android:onClick="categoriesPage"

            android:contentDescription="@string/lbl_categories">
        </ImageButton>
        <ImageButton
            android:id="@+id/btn_home"
            android:layout_width="48sp"
            android:layout_height="48sp"
            android:src="@drawable/home_icon_dark_mode"
            android:background="@color/strong_maroon"

            android:scaleX="0.75"
            android:scaleY="0.75"

            android:onClick="homePage"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            android:contentDescription="@string/lbl_home">
        </ImageButton>
        <ImageButton
            android:id="@+id/btn_expenses"
            android:layout_width="48sp"
            android:layout_height="48sp"
            android:src="@drawable/expenses_button_dark_mode"
            android:background="@color/strong_maroon"

            android:onClick="expensePage"

            android:scaleX="0.75"
            android:scaleY="0.75"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_home"
            app:layout_constraintEnd_toStartOf="@id/btn_awards"

            android:contentDescription="@string/lbl_expenses">
        </ImageButton>
        <ImageButton
            android:id="@+id/btn_awards"
            android:layout_width="48sp"
            android:layout_height="48sp"
            android:src="@drawable/award_icon_dark_mode"
            android:background="@color/strong_maroon"


            android:scaleX="0.75"
            android:scaleY="0.75"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="20dp"

            android:contentDescription="@string/lbl_awards">
        </ImageButton>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>